fixed redbook overlapping styling on carsales and other verticals

--- a/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Css/Layout/_page-container.scss
+++ b/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Css/Layout/_page-container.scss
@@ -2,4 +2,21 @@
     text-align: left;
 }
 
+.tenant-redbook {
+    @if($tenant-redbook-container != "") {
+        padding-top: 90px;
 
+        .article-type--video,
+        .article-type--singleimage {
+            padding-top: 15px;
+        }
+
+        .container {
+            padding-top: 15px;
+        }
+
+        #page-footer {
+            padding-top: 20px;
+        }
+    }
+}
