--- a/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Css/Variables/Settings/_variables-settings.scss
+++ b/Src/Csn.Retail.Editorial.Web/Features/Shared/Assets/Css/Variables/Settings/_variables-settings.scss
@@ -1,2 +1,3 @@
 ﻿$root-path: "http://localhost:8080";
 $article-promoted-image: "" !default;
+$tenant-redbook-container: "" !default;
